# port-forward-operator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  Tiltfile
.github/: rustfmt.yml
.github/workflows/: audit.yml  clippy_check.yml  cross_compile.yml  dependabot.yml  grcov.yml  nightly_lint.yml  release.yml
manifests/kubernetes/development/: kustomization.yaml
manifests/kubernetes/production/: crdv1.forwardedservice.yaml  deployment.port-forward-controller.yaml  kustomization.yaml  namespace.port-forward-operator-system.yaml  rbac.port-forward-controller.yaml  service.port-forward-controller.yaml
src/: app.rs  crd.rs  crdgen.rs  error.rs  lib.rs  main.rs
src/controller/: host.rs  mod.rs  state.rs
src/service/: mod.rs
