[package]
name = "port-forward-operator"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/mightyshazam/port-forward-operator"
authors = ["KyJah Keys <kyjah.keys@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[dependencies]
axum = { version = "0.6.20", features = ["tracing"] }
axum-prometheus = "0.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4", features = ["color", "derive", "env"] }
futures = "0.3.28"
k8s-openapi = { version = "0.19", default-features = false, features = [
    "v1_23",
] }
kube = { version = "0.85.0", default-features = false, features = ["client", "runtime", "derive", "rustls-tls", "ws"] }
schemars = { version = "0.8.12" }
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
thiserror = "1.0.46"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.17"